--- a/client/app/admin-dashboard/admin-dashboard.html
+++ b/client/app/admin-dashboard/admin-dashboard.html
@@ -3,7 +3,7 @@
 		<div class="logo">
 			<a href="#" class="logo-link">Animal Collective</a>
 		</div>
-		<div class="avatar">
+		<div class="avatar" admin-dashboard>
 			<img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="" class="avatar-image">
 		</div>
 		<div class="dropdown">
@@ -16,7 +16,6 @@
 		</div>
 	</div>
 </nav>
-
 <section class="subhead">
 	<div class="container">
 		<h1 class="subhead-title">{{adminDashboard.title}}</h1>
