--- a/client/index.html
+++ b/client/index.html
@@ -64,15 +64,16 @@
       <script src="app/admin/admin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/main/main.js"></script>
+      <script src="app/main/main.controller.js"></script>
+      <script src="app/admin-dashboard/admin-dashboard.directive.js"></script>
       <script src="app/account/account.js"></script>
       <script src="app/admin-dashboard/admin-dashboard.router.js"></script>
       <script src="app/admin/admin.controller.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
       <script src="app/admin/admin.router.js"></script>
       <script src="app/app.constant.js"></script>
-      <script src="app/main/main.controller.js"></script>
       <script src="app/account/login/login.controller.js"></script>
+      <script src="app/main/main.js"></script>
       <script src="app/account/signup/signup.controller.js"></script>
       <script src="components/auth/auth.service.js"></script>
       <script src="components/auth/interceptor.service.js"></script>
