--- a/client/app/admin-dashboard/admin-dashboard.html
+++ b/client/app/admin-dashboard/admin-dashboard.html
@@ -1,77 +1,169 @@
 <nav class="nav">
-	<div class="container">
-		<div class="logo">
-			<a href="#" class="logo-link">Animal Collective</a>
-		</div>
-		<div class="avatar" admin-dashboard>
-			<img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="" class="avatar-image">
-		</div>
-		<div class="dropdown">
-			<div class="dropdown-caret"></div>
-			<ul>
-				<a href="#" class="dropdown-items"><li>View Website</li></a>
-				<a href="#" class="dropdown-items"><li>Admin</li></a>
-				<a href="#" class="dropdown-items"><li>Log Out</li></a>
-			</ul>
-		</div>
-	</div>
+    <div class="container">
+        <div class="logo">
+            <a href="#" class="logo-link">Animal Collective</a>
+        </div>
+        <div class="avatar" admin-dashboard>
+            <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="" class="avatar-image">
+        </div>
+        <div class="dropdown">
+            <div class="dropdown-caret"></div>
+            <ul>
+                <a href="/" class="dropdown-items">
+                    <li>View Website</li>
+                </a>
+                <a href="/admin" class="dropdown-items">
+                    <li>Admin</li>
+                </a>
+                <a href="/logout" class="dropdown-items">
+                    <li>Log Out</li>
+                </a>
+            </ul>
+        </div>
+    </div>
 </nav>
 <section class="subhead">
-	<div class="container">
-		<h1 class="subhead-title">{{adminDashboard.title}}</h1>
-		<div class="subhead-menu">
-			<a href="#"  ng-class="{active: adminDashboard.isActive('/admin-dashboard')}">Animals</a>
-			<a href="#"  ng-class="{active: adminDashboard.isActive('/admin-interviews')}">Interviews</a>
-		</div>
-	</div>
+    <div class="container">
+        <h1 class="subhead-title">{{adminDashboard.title}}</h1>
+        <div class="subhead-menu">
+            <a href="#" ng-class="{active: adminDashboard.isActive('/admin-dashboard')}">Animals</a>
+            <a href="#" ng-class="{active: adminDashboard.isActive('/admin-interviews')}">Interviews</a>
+        </div>
+    </div>
 </section>
-
 <section class="animal-list">
-	<div class="container">
-
-		<div class="animal-list-box">
-			<ul>
-				<li class="animal-list-box--items">
-					<img class="animal-list-avatar" src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="">
-					<div class="animal-list-info">
-						<p class="animal-list-info--name">Name</p>
-						<p class="animal-list-info--id">Instgram ID</p>
-					</div>
-					<div class="animal-list-more">
-						<p>...</p>
-					</div>
-				</li>
-				<li class="animal-list-box--items">
-					<img class="animal-list-avatar" src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="">
-					<div class="animal-list-info">
-						<p class="animal-list-info--name">Name</p>
-						<p class="animal-list-info--id">Instgram ID</p>
-					</div>
-					<div class="animal-list-more">
-						<p>...</p>
-					</div>
-				</li>
-				<li class="animal-list-box--items">
-					<img class="animal-list-avatar" src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="">
-					<div class="animal-list-info">
-						<p class="animal-list-info--name">Name</p>
-						<p class="animal-list-info--id">Instgram ID</p>
-					</div>
-					<div class="animal-list-more">
-						<p>...</p>
-					</div>
-				</li>
-				<li class="animal-list-box--items">
-					<img class="animal-list-avatar" src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="">
-					<div class="animal-list-info">
-						<p class="animal-list-info--name">Name</p>
-						<p class="animal-list-info--id">Instgram ID</p>
-					</div>
-					<div class="animal-list-more">
-						<p>...</p>
-					</div>
-				</li>
-			</ul>
-		</div>
-	</div>
+    <div class="container">
+        <div class="animal-list-box">
+            <ul>
+                <li class="animal-list-box--items">
+                    <img class="animal-list-avatar" src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="">
+                    <div class="animal-list-info">
+                        <p class="animal-list-info--name">Name</p>
+                        <p class="animal-list-info--id">Instgram ID</p>
+                    </div>
+                    <div class="animal-list-more">
+                        <div class="three-dots-menu">
+                            <ul>
+                                <li>EDIT</li>
+                                <li>DELETE</li>
+                            </ul>
+                        </div>
+                        <svg class="three-dots" width="31px" height="7px" viewBox="0 0 31 7" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns" circle-menu>
+                            <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+                                <g id="Dashboard" sketch:type="MSArtboardGroup" transform="translate(-1321.000000, -433.000000)" fill="#CACACA">
+                                    <g id="List" sketch:type="MSLayerGroup" transform="translate(87.000000, 309.000000)">
+                                        <g id="Group" transform="translate(0.000000, 88.000000)" sketch:type="MSShapeGroup">
+                                            <g id="three-dots">
+                                                <g transform="translate(1234.000000, 36.000000)">
+                                                    <ellipse id="Oval-2" cx="27.7211538" cy="3.5" rx="3.27884615" ry="3.5"></ellipse>
+                                                    <ellipse id="Oval-2" cx="15.2019231" cy="3.5" rx="3.27884615" ry="3.5"></ellipse>
+                                                    <ellipse id="Oval-2" cx="3.27884615" cy="3.5" rx="3.27884615" ry="3.5"></ellipse>
+                                                </g>
+                                            </g>
+                                        </g>
+                                    </g>
+                                </g>
+                            </g>
+                        </svg>
+                    </div>
+                </li>
+                <li class="animal-list-box--items">
+                    <img class="animal-list-avatar" src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="">
+                    <div class="animal-list-info">
+                        <p class="animal-list-info--name">Name</p>
+                        <p class="animal-list-info--id">Instgram ID</p>
+                    </div>
+                    <div class="animal-list-more">
+                        <div class="three-dots-menu">
+                            <ul>
+                                <li>EDIT</li>
+                                <li>DELETE</li>
+                            </ul>
+                        </div>
+                        <svg class="three-dots" width="31px" height="7px" viewBox="0 0 31 7" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns" circle-menu>
+                            <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+                                <g id="Dashboard" sketch:type="MSArtboardGroup" transform="translate(-1321.000000, -433.000000)" fill="#CACACA">
+                                    <g id="List" sketch:type="MSLayerGroup" transform="translate(87.000000, 309.000000)">
+                                        <g id="Group" transform="translate(0.000000, 88.000000)" sketch:type="MSShapeGroup">
+                                            <g id="three-dots">
+                                                <g transform="translate(1234.000000, 36.000000)">
+                                                    <ellipse id="Oval-2" cx="27.7211538" cy="3.5" rx="3.27884615" ry="3.5"></ellipse>
+                                                    <ellipse id="Oval-2" cx="15.2019231" cy="3.5" rx="3.27884615" ry="3.5"></ellipse>
+                                                    <ellipse id="Oval-2" cx="3.27884615" cy="3.5" rx="3.27884615" ry="3.5"></ellipse>
+                                                </g>
+                                            </g>
+                                        </g>
+                                    </g>
+                                </g>
+                            </g>
+                        </svg>
+                    </div>
+                </li>
+                <li class="animal-list-box--items">
+                    <img class="animal-list-avatar" src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="">
+                    <div class="animal-list-info">
+                        <p class="animal-list-info--name">Name</p>
+                        <p class="animal-list-info--id">Instgram ID</p>
+                    </div>
+                    <div class="animal-list-more">
+                        <div class="three-dots-menu">
+                            <ul>
+                                <li>EDIT</li>
+                                <li>DELETE</li>
+                            </ul>
+                        </div>
+                        <svg class="three-dots" width="31px" height="7px" viewBox="0 0 31 7" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns" circle-menu>
+                            <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+                                <g id="Dashboard" sketch:type="MSArtboardGroup" transform="translate(-1321.000000, -433.000000)" fill="#CACACA">
+                                    <g id="List" sketch:type="MSLayerGroup" transform="translate(87.000000, 309.000000)">
+                                        <g id="Group" transform="translate(0.000000, 88.000000)" sketch:type="MSShapeGroup">
+                                            <g id="three-dots">
+                                                <g transform="translate(1234.000000, 36.000000)">
+                                                    <ellipse id="Oval-2" cx="27.7211538" cy="3.5" rx="3.27884615" ry="3.5"></ellipse>
+                                                    <ellipse id="Oval-2" cx="15.2019231" cy="3.5" rx="3.27884615" ry="3.5"></ellipse>
+                                                    <ellipse id="Oval-2" cx="3.27884615" cy="3.5" rx="3.27884615" ry="3.5"></ellipse>
+                                                </g>
+                                            </g>
+                                        </g>
+                                    </g>
+                                </g>
+                            </g>
+                        </svg>
+                    </div>
+                </li>
+                <li class="animal-list-box--items">
+                    <img class="animal-list-avatar" src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="">
+                    <div class="animal-list-info">
+                        <p class="animal-list-info--name">Name</p>
+                        <p class="animal-list-info--id">Instgram ID</p>
+                    </div>
+                    <div class="animal-list-more">
+                        <div class="three-dots-menu">
+                            <ul>
+                                <li>EDIT</li>
+                                <li>DELETE</li>
+                            </ul>
+                        </div>
+                        <svg class="three-dots" width="31px" height="7px" viewBox="0 0 31 7" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns" circle-menu>
+                            <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+                                <g id="Dashboard" sketch:type="MSArtboardGroup" transform="translate(-1321.000000, -433.000000)" fill="#CACACA">
+                                    <g id="List" sketch:type="MSLayerGroup" transform="translate(87.000000, 309.000000)">
+                                        <g id="Group" transform="translate(0.000000, 88.000000)" sketch:type="MSShapeGroup">
+                                            <g id="three-dots">
+                                                <g transform="translate(1234.000000, 36.000000)">
+                                                    <ellipse id="Oval-2" cx="27.7211538" cy="3.5" rx="3.27884615" ry="3.5"></ellipse>
+                                                    <ellipse id="Oval-2" cx="15.2019231" cy="3.5" rx="3.27884615" ry="3.5"></ellipse>
+                                                    <ellipse id="Oval-2" cx="3.27884615" cy="3.5" rx="3.27884615" ry="3.5"></ellipse>
+                                                </g>
+                                            </g>
+                                        </g>
+                                    </g>
+                                </g>
+                            </g>
+                        </svg>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
 </section>
