--- a/client/index.html
+++ b/client/index.html
@@ -21,10 +21,10 @@
 
 <body ng-app="animalCollectiveApp">
     <!-- Add your site or application content here -->
-    <navbar></navbar>
-    <div ng-view=""></div>
-    <footer></footer>
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
+<!--     <navbar></navbar>
+ -->    <div ng-view=""></div>
+<!--     <footer></footer>
+ -->    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
