--- a/client/app/admin-dashboard/admin-dashboard.html
+++ b/client/app/admin-dashboard/admin-dashboard.html
@@ -1,36 +1,4 @@
-<nav class="nav">
-    <div class="container">
-        <div class="logo">
-            <a href="#" class="logo-link">Animal Collective</a>
-        </div>
-        <div class="avatar" admin-dashboard>
-            <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="" class="avatar-image">
-        </div>
-        <div class="dropdown">
-            <div class="dropdown-caret"></div>
-            <ul>
-                <a href="/" class="dropdown-items">
-                    <li>View Website</li>
-                </a>
-                <a href="/admin" class="dropdown-items">
-                    <li>Admin</li>
-                </a>
-                <a href="/logout" class="dropdown-items">
-                    <li>Log Out</li>
-                </a>
-            </ul>
-        </div>
-    </div>
-</nav>
-<section class="subhead">
-    <div class="container">
-        <h1 class="subhead-title">{{adminDashboard.title}}</h1>
-        <div class="subhead-menu">
-            <a href="#" ng-class="{active: adminDashboard.isActive('/admin-dashboard')}">Animals</a>
-            <a href="#" ng-class="{active: adminDashboard.isActive('/admin-interviews')}">Interviews</a>
-        </div>
-    </div>
-</section>
+<navbar-admin></navbar-admin>
 <section class="animal-list">
     <div class="container">
         <div class="animal-list-header">
@@ -52,7 +20,7 @@
                 <input class="ac-label"  type="text" placeholder="Search">
             </div>
             <div class="animal-list-header--button">
-                <a class="ac-button" href="#">ADD ANIMAL</a>
+                <a class="ac-button" href="/admin-dashboard/create-animal">ADD ANIMAL</a>
             </div>
         </div>
         <div class="animal-list-box">
