Add edit router and refactor create animal module

--- a/client/index.html
+++ b/client/index.html
@@ -63,6 +63,7 @@
     <script src="components/util/util.module.js"></script>
     <script src="app/main/main.controller.js"></script>
     <script src="app/admin-animal/admin-animal.router.js"></script>
+    <script src="app/admin-animal/services.js"></script>
     <script src="app/admin-dashboard/admin-dashboard.controller.js"></script>
     <script src="app/account/settings/settings.controller.js"></script>
     <script src="app/admin-dashboard/admin-dashboard.router.js"></script>
