--- a/client/app/admin-dashboard/admin-dashboard.html
+++ b/client/app/admin-dashboard/admin-dashboard.html
@@ -48,7 +48,7 @@
                                             </svg>
                                         </a>
                                     </li>
-                                    <li>
+                                    <li ng-click="adminDashboard.remove(animal)">
                                         <svg width="16px" height="20px" viewBox="0 0 14 18" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                             <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                                 <g id="Action" transform="translate(-53.000000, -291.000000)">
