--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -1,9 +1,34 @@
+<section class="login">
+    <div class="login-wrapper">
+        <div class="login-box">
+            <h1>Login</h1>
+            <p class="login-subtitle">Please sign in to continue</p>
+            <form name="form" ng-submit="vm.login(form)" novalidate>
+                <input type="email" class="ac-label default" name="email" placeholder="Email" ng-model="vm.user.email" required>
+                <input type="password" class="ac-label default" name="password" placeholder="Password" ng-model="vm.user.password" required>
+                <input type="submit" class="ac-button login" value="Login">
+
+                <div>
+                    <p class="login-help-block" ng-show="form.email.$error.required && form.password.$error.required && vm.submitted">
+                        Please login-enter your email and password.
+                    </p>
+                    <p class="login-help-block" ng-show="form.email.$error.email && vm.submitted">
+                        Please enter a valid email.
+                    </p>
+                    <p class="login-help-block">{{ vm.errors.other }}</p>
+                </div>
+
+            </form>
+        </div>
+        <p class="login-check">Don't have an account? <span class="login-check--signup"><a href="/signup">Sign up</a></span></p>
+    </div>
+</section>
+<!-- 
+
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
       <h1>Login</h1>
-      <p>Accounts are reset on server restart from <code>server/config/seed.js</code>. Default account is <code>test@example.com</code> / <code>test</code></p>
-      <p>Admin account is <code>admin@example.com</code> / <code>admin</code></p>
     </div>
     <div class="col-sm-12">
       <form class="form" name="form" ng-submit="vm.login(form)" novalidate>
@@ -39,9 +64,8 @@
             Register
           </a>
         </div>
-
       </form>
     </div>
   </div>
   <hr>
-</div>
+</div> -->
