--- a/client/index.html
+++ b/client/index.html
@@ -38,7 +38,7 @@
         m.parentNode.insertBefore(a, m)
     })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-    ga('create', 'UA-XXXXX-X');
+    ga('create', 'UA-77030502-1');
     ga('send', 'pageview');
     </script>
     <!-- build:js({client,node_modules}) app/vendor.js -->
