--- a/client/app/interviews/dashboard/interviews-dashboard.html
+++ b/client/app/interviews/dashboard/interviews-dashboard.html
@@ -29,7 +29,7 @@
                     <div class="gallery">
                         <ul>
                             <li class="gallery__items" ng-repeat="item in adminInterview.interviews">
-                                <div class="gallery__items--hero" style="background-image:url('{{item.images[0].animal}}');">
+                                <div class="gallery__items--hero" style="background-image:url('{{item.images[0].animal_thumbnail}}');">
                                     <img src="{{item.images[0].owner}}" alt="">
                                 </div>
                                 <div class="gallery__items--info">
