--- a/client/index.html
+++ b/client/index.html
@@ -73,7 +73,7 @@
     <script src="app/animals/crud-animal/animal.controller.js"></script>
     <script src="app/account/settings/settings.controller.js"></script>
     <script src="app/animals/crud-animal/animal.router.js"></script>
-    <script src="app/animals/crud-animal/services.js"></script>
+    <script src="app/animals/crud-animal/animal.service.js"></script>
     <script src="app/animals/dashboard/animal-dashboard.controller.js"></script>
     <script src="app/account/signup/signup.controller.js"></script>
     <script src="app/animals/dashboard/animal-dashboard.router.js"></script>
@@ -81,6 +81,7 @@
     <script src="app/interviews/crud-interview/interviews.controller.js"></script>
     <script src="app/admin/admin.controller.js"></script>
     <script src="app/interviews/crud-interview/interviews.router.js"></script>
+    <script src="app/interviews/crud-interview/interviews.service.js"></script>
     <script src="app/account/login/login.controller.js"></script>
     <script src="app/account/account.js"></script>
     <script src="app/interviews/dashboard/interviews-dashboard.router.js"></script>
@@ -98,6 +99,7 @@
     <script src="components/navbar-admin/navbar-admin.directive.js"></script>
     <script src="components/navbar/navbar.controller.js"></script>
     <script src="components/navbar/navbar.directive.js"></script>
+    <script src="components/util/util.directive.js"></script>
     <script src="app/animals/crud-animal/animal-edit.controller.js"></script>
     <script src="components/util/util.service.js"></script>
     <!-- endinjector -->
