--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,6 +1,7 @@
 <navbar></navbar>
 <section class="main">
     <div class="container">
+        <h1 class="main_title">Collection of popular animal <br>instagram accounts</h1>
         <div class="gallery_home">
             <ul>
                 <li class="gallery_home--items" ng-repeat="item in main.animals">
