CSS property chnage

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -2,15 +2,15 @@
 <section class="main">
     <div class="container">
         <h1 class="main_title">Collection of popular animal <br>instagram accounts</h1>
-        <ul isotope-widget class="grid">
-            <li class="grid-item" ng-repeat="item in main.animals">
-                <div class="grid-info">
+        <ul isotope-widget class="main_grid">
+            <li class="main_grid-item" ng-repeat="item in main.animals">
+                <div class="main_grid-info">
                     <article>
                         <p>{{item.name}}</p>
                         <p>@{{item.instagram}}</p>
                     </article>
                 </div>
-                <div class="grid-hero" style="background-image:url('{{item.image}}');"></div>
+                <div class="main_grid-hero" style="background-image:url('{{item.image}}');"></div>
             </li>
         </ul>
     </div>
