--- a/client/index.html
+++ b/client/index.html
@@ -88,6 +88,7 @@
     <script src="app/account/account.js"></script>
     <script src="app/interviews/dashboard/interviews-dashboard.router.js"></script>
     <script src="app/main/main.controller.js"></script>
+    <script src="app/main/main.directive.js"></script>
     <script src="app/main/main.js"></script>
     <script src="app/admin/admin.router.js"></script>
     <script src="components/auth/auth.service.js"></script>
