Add responsive breakpoints for the homepage

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -8,7 +8,7 @@
             <br> famous dogs</p>
     </div>
 </section>
-<section class="main">
+<section class="collective">
     <div class="container">
         <div class="filter_wrapper">
             <div class="form-select">
@@ -28,7 +28,7 @@
                             <p>@{{item.instagram}}</p>
                         </article>
                     </div>
-                    <div class="gallery_home--items---hero" style="background-image:url('{{item.image}}');">
+                    <div class="gallery_home--items---image" style="background-image:url('{{item.image}}');">
                     </div>
                 </li>
             </ul>
