--- a/client/index.html
+++ b/client/index.html
@@ -69,7 +69,7 @@
     <script src="app/interviews/dashboard/interviews-dashboard.module.js"></script>
     <script src="components/auth/auth.module.js"></script>
     <script src="components/util/util.module.js"></script>
-    <script src="app/interviews/dashboard/interviews-dashboard.controller.js"></script>
+    <script src="app/interviews/dashboard/interviews-dashboard.router.js"></script>
     <script src="app/animals/crud-animal/animal.controller.js"></script>
     <script src="app/account/settings/settings.controller.js"></script>
     <script src="app/animals/crud-animal/animal.router.js"></script>
@@ -82,12 +82,15 @@
     <script src="app/admin/admin.controller.js"></script>
     <script src="app/interviews/crud-interview/interviews.router.js"></script>
     <script src="app/interviews/crud-interview/interviews.service.js"></script>
-    <script src="app/account/login/login.controller.js"></script>
+    <script src="app/interviews/dashboard/interviews-dashboard.controller.js"></script>
     <script src="app/account/account.js"></script>
-    <script src="app/interviews/dashboard/interviews-dashboard.router.js"></script>
-    <script src="app/main/main.controller.js"></script>
-    <script src="app/main/main.directive.js"></script>
-    <script src="app/main/main.js"></script>
+    <script src="app/account/login/login.controller.js"></script>
+    <script src="app/main/home/main.controller.js"></script>
+    <script src="app/main/home/main.directive.js"></script>
+    <script src="app/main/home/main.js"></script>
+    <script src="app/main/interviews/interview.controller.js"></script>
+    <script src="app/main/interviews/interview.js"></script>
+    <script src="app/main/interviews/interview.service.js"></script>
     <script src="app/admin/admin.router.js"></script>
     <script src="components/auth/auth.service.js"></script>
     <script src="components/auth/interceptor.service.js"></script>
